# rust-hacks

./: .gitignore  README.md
.github/workflows/: rust.yml
file-handling/: Cargo.toml
file-handling/src/: main.rs
k8s-operator/: Cargo.toml  Dockerfile  Makefile  README.md
k8s-operator/manifests/: cr.yaml  crd.yaml
k8s-operator/manifests/operator/: deployment.yaml  role.yaml  role_binding.yaml  service_account.yaml
k8s-operator/src/: main.rs
redisload/: Cargo.toml  start-redis-cluster.sh
redisload/src/: main.rs
sdl-window/: Cargo.toml
sdl-window/src/: main.rs
simple-http-server/: Cargo.toml  Dockerfile  README.md
simple-http-server/charts/simple-http-server/: Chart.yaml  values.yaml
simple-http-server/charts/simple-http-server/templates/: _helpers.tpl  deployment.yaml  service.yaml
simple-http-server/src/: main.rs
tetris/: Cargo.toml
tetris/src/: main.rs
threadpool/: Cargo.toml  README.md
threadpool/src/: lib.rs
udp-server/: Cargo.toml
udp-server/src/: main.rs
