[package]
name = "simple-http-server"
version = "0.1.0"
authors = ["Björn Svensson <bjorn.d.svensson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
futures = "0.1"
serde_json = "1.0"
hostname = "0.1.5"